# SPARK

./: .gitignore  HashCommit.ec  README.md  cppcheck.xml  spark-remote.pv  spark-setup.pv
App/: .gitignore  gradle.properties  gradlew  settings.gradle.kts
App/app/: build.gradle.kts
App/app/src/androidTest/java/uk/ac/york/emrys/: ExampleInstrumentedTest.kt
App/app/src/main/: AndroidManifest.xml
App/app/src/main/java/uk/ac/york/emrys/: BluetoothService.kt  ByteTransport.kt  Channel.kt  ConnectionForegroundService.kt  ConnectionManager.kt  ConnectionService.kt  CryptoMessageHandler.kt  CustomWebSocketListener.kt  Frame.kt  IListener.kt  KeyManager.kt  LoginApprovalActivity.kt  MainActivity.kt  Message.kt  Messages.kt  SecureKeyStore.kt  SetupClient.kt  SetupService.kt  UDPBroadcastListener.kt  WebSocketService.kt
App/app/src/main/res/layout/: activity_login_approval.xml  activity_main.xml
App/app/src/main/res/raw/: server.crt
App/app/src/main/res/values/: colors.xml  themes.xml
App/app/src/main/res/values-night/: colors.xml  themes.xml
App/app/src/main/res/xml/: network_security_config.xml
App/app/src/test/java/uk/ac/york/emrys/: ExampleUnitTest.kt  FrameTest.kt  MessagesTest.kt
App/gradle/: libs.versions.toml
App/gradle/wrapper/: gradle-wrapper.properties
PAM/: .gitignore  CMakeLists.txt  PAM.cppcheck  authenticator.c  authenticator.h  build_pam.sh  config_manager.c  config_manager.h  cppcheck.xml  frame_codec_test.c  gen-crt.sh  lint.sh  log_manager.c  log_manager.h  main.c  pairing_server.c  pairing_server.h  pam_authenticator.c  pam_authenticator.h  run.sh  setup.sh  setup_server.c  setup_server.h  time_utils.c  time_utils.h  tpm_counter.c  tpm_counter.h
PAM/certs/: cert.pem  server.crt  server.key
PAM/communication/: channel.c  channel.h  connection_manager.c  connection_manager.h  frame.c  frame.h  message_manager.c  message_manager.h  messages.c  messages.h  pairing.c  pairing.h  phone_connection.c  phone_connection.h  sas.c  sas.h  transport.c  transport.h
PAM/communication/bluetooth/: bluetooth_service.c  bluetooth_service.h  bt_client.c  bt_client.h  sdp_manager.c  sdp_manager.h
PAM/communication/websocket/: udp_broadcast.c  udp_broadcast.h  websocket.c  websocket.h  websocket_service.c  websocket_service.h
PAM/cryptography/: cryptographic_methods.c  cryptographic_methods.h  key_manager.c  key_manager.h
PAM/pam_config/: authenticator-test
PAM/tests/: comms_tests.c  crypto_envelope_tests.c  frame_codec_tests.c  unity.c  unity.h
